--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <resources>
     <string name="app_name">Prototipo</string>
-
+    <string name="facebook_app_id">1735168520351694</string>
+               <string name="fb_login_protocol_scheme">fb1735168520351694</string>
 </resources>
